css/image-dex.css
html {
	box-sizing: border-box;
	font-size: 62.5%;
	margin: 0;
	padding: 0;
}

*, *::before, *::after {
	box-sizing: inherit;
}

body {
	font-size: 1.6rem;
} 

div#imgdex {
	position: relative;
	perspective: 4000px;
	transform-style: preserve-3d;
	padding-top: 58%;
}

#imgdex figure,
#imgdex figure figcaption {
	position: absolute;
	transition: 1s ease-in-out;
}

#imgdex figure {
	top: 0;
	left: 120px;
	transform-origin: left bottom;
	width: 70%;
	height: 100%;
}

#imgdex figure img {
	width: 100%;
	height: 100%;
}

#imgdex figure figcaption {
	bottom: 0;
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	font-size: 1.9rem;
	left: -15rem;
	opacity: 0;
}

#imgdex figure:last-of-type {
	transform: rotateX(5deg);
	box-shadow: 0 0 200px rgba(0, 0, 0, .5);
}

#ranger {
	position: absolute;
	bottom: -25%;
	left: 25%;
	width: 50%;
}

